# tamasha

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
app/backend/: .env.example  Dockerfile  pyproject.toml
app/backend/app/: config.py  dependencies.py  main.py
app/backend/app/core/: audit.py  exceptions.py  pagination.py  rbac.py  seed.py
app/backend/app/db/: mongo.py  redis.py
app/backend/app/fingerprint/: engine.py  store.py
app/backend/app/middleware/: audit_context.py  rate_limit.py
app/backend/app/models/: analytics_event.py  artist.py  audit_log.py  billing.py  duplicate.py  sync_job.py  track.py  upload.py  user.py
app/backend/app/routers/: admin.py  analytics.py  audit_logs.py  auth.py  billing.py  duplicates.py  media_monitoring.py  r2_pool.py  recognize.py  sync_jobs.py  tracks.py  users.py
app/backend/app/schemas/: audit_log.py  auth.py  billing.py  duplicate.py  media_monitoring.py  recognize.py  sync_job.py  track.py  upload.py  user.py
app/backend/app/services/: auth_service.py  billing_service.py  duplicate_service.py  recognize_service.py  storage_service.py  track_service.py  user_service.py
app/backend/app/tasks/: backup.py  billing.py  dedup.py  email.py  fingerprint.py
app/backend/app/utils/: object_id.py
app/worker/: .env.example  Dockerfile  pyproject.toml
app/worker/worker/: celery_app.py  config.py
app/worker/worker/db/: mongo.py
app/worker/worker/fingerprint/: engine.py
app/worker/worker/storage/: r2.py
app/worker/worker/tasks/: analytics.py  billing.py  dedup.py  email.py  fingerprint.py  metadata.py  (+1 more)
(+198 files in other folders)
