[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamasha-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.2.0",
  "motor>=3.4.0",
  "pymongo>=4.7.0",
  "redis[hiredis]>=5.0.0",
  "celery>=5.3.0",
  "boto3>=1.34.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.0.0",
  "python-multipart>=0.0.9",
  "structlog>=24.1.0",
  "opensearch-py>=2.5.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
