[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamasha-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.3.0",
  "pymongo>=4.7.0",
  "motor>=3.4.0",
  "boto3>=1.34.0",
  "mutagen>=1.47.0",
  "pydantic-settings>=2.2.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.1.0",
  "pyacoustid>=1.3.0",
  "resend>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["worker"]
